# Diploms-projects

Bank system/: README.md  run.sh
Bank system/Bank_system/: Bank_account_factory.cpp  Bank_account_factory.h  Banks.cpp  Banks.h  Build_user.cpp  Build_user.h  CMakeLists.txt  Console.cpp  Console.h  Transferring.cpp  Transferring.h  Users_storage.h  main.cpp  user_info.cpp  user_info.h
Clicker/: README.md  clicker.py  run.sh
Deque/: Deque.h
String/: String.h
